--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="scroll"><img src="images/arrow1.gif" alt=""></div>
 
 <header>
-<h1 id="logo"><a href="index.html"><img src="images/logo.png" alt="Sample Cafe"></a></h1>
+<h1 id="logo"><a href="index.html"><img src="images/logo1.png" alt="Sample Cafe"></a></h1>
 </header>
 
 <div id="container">
