--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <section>
 
-<h2>This week's lunch<span>今週のランチ</span></h2>
+<h2>infomation<span>自己紹介</span></h2>
 
 <div class="list2">
 <figure class="up">
@@ -35,12 +35,12 @@
 <figcaption>今週のランチA（ハンバーグ）</figcaption>
 </figure>
 <div class="text">
-<h4>今週のランチA　2,000yen</h4>
 <ul>
-<li>前菜<span>細かい説明があればここに入力します。サンプルテキスト。</span></li>
-<li>今週のスープ<span>細かい説明があればここに入力します。サンプルテキスト。</span></li>
-<li>今週のメイン<span>細かい説明があればここに入力します。サンプルテキスト。</span></li>
-<li>デザート<span>細かい説明があればここに入力します。サンプルテキスト。細かい説明があればここに入力します。サンプルテキスト。</span></li>
+<li>名前<span>髙木　雄河</span></li>
+<li>生年月日<span>1998年7月21日　熊本生まれ</span></li>
+<li>学歴<span>崇城大学情報学部情報学科卒</span></li>
+<li>○○<span>中学生の時に見たYouTubeの影響で映像という分野に興味を持つ。崇城大学進学と同時に、映像についてのスキルを身に付けるため、株式会社レイヤーにて結婚式の撮影・編集のアルバイトを開始。主に、披露宴の最後に流すライブエンドロールの撮影・編集を担当。年間100件近くの婚礼の撮影を行っている。その他、保育園などの運動会の撮影も行った。
+その経験を活かし、大学のPR動画制作を行ったり、同大学芸術学部デザイン学科と合同で、卒業展の映像を制作した。</span></li>
 </ul>
 </div>
 </div>
