--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
 <div class="list2">
 <figure class="up">
-<img src="images/sample1.jpg" alt="今週のランチA">
-<figcaption>今週のランチA（ハンバーグ）</figcaption>
+<img src="images/image02.jpg" alt="写真">
+#<figcaption>今週のランチA（ハンバーグ）</figcaption>
 </figure>
 <div class="text">
 <ul>
