--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 <div class="scroll"><img src="images/arrow1.gif" alt=""></div>
 
 <header>
-      <div class="name">
-        <h1>
+  <span class="slide-in leftAnime">
+  <span class="slide-in_inner leftAnimeInner"><h1>
          <span>TAKAKI YUGA <br /></span>
           PORTFOLIO <br />
         </h1>
         <p>一生残る 一瞬のリアルを切り取る</p>
-      </div>
+  </span>
 </header>
 
 <div id="container">
