--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <header>
   <span class="slide-in leftAnime">
-  <span class="slide-in_inner leftAnimeInner"><h1>
-         <span>TAKAKI YUGA <br /></span>
+  <span class="slide-in_inner leftAnimeInner">
+        <h1><span>TAKAKI YUGA <br /></span>
           PORTFOLIO <br />
         </h1>
     <p>一生残る 一瞬のリアルを切り取る</p>
