--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="scroll"><img src="images/arrow1.gif" alt=""></div>
 
 <header>
-<h1 id="logo"><a href="index.html"><img src="images/logo1.png" alt="Sample Cafe"></a></h1>
+<h1 id="logo"><a href="index.html"><img src="images/logo1.png" alt="infomation"></a></h1>
 </header>
 
 <div id="container">
@@ -100,14 +100,6 @@
 
 <!--jQueryファイルの読み込み-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
-<!--スライドショー（vegas）-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/vegas/2.5.4/vegas.min.js"></script>
-<script src="js/vegas.js"></script>
-
-<!--スライドショー（slick）-->
-<script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-<script src="js/slick.js"></script>
 
 <!--パララックス（inview）-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/protonet-jquery.inview/1.1.2/jquery.inview.min.js"></script>
