--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
 
 <body class="home">
 
-<!--スライドショー-->
-<div id="mainimg"></div>
-
 <!--スクロールを促すアイコン-->
 <div class="scroll"><img src="images/arrow1.gif" alt=""></div>
 
 <header>
 <h1 id="logo"><a href="index.html"><img src="images/logo0.png" alt="infomation"></a></h1>
+  <!--スクロールを促すアイコン-->
+<div class="scroll"><img src="images/arrow1.gif" alt=""></div>
 </header>
 
 <div id="container">
