--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
 <body class="home">
 
 <header>
-<h1 id="logo"><a href="index.html"><img src="images/logo0.png" alt="infomation"></a></h1>
+  <div class="flowing">
+        <h1>
+         <span>TAKAKI YUGA <br /></span>
+          PORTFOLIO <br />
+        </h1>
+        <p>一生残る 一瞬のリアルを切り取る</p>
+      </div>
   <!--スクロールを促すアイコン-->
 <div class="scroll"><img src="images/arrow1.gif" alt=""></div>
 </header>
