--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
 
 <header>
   <div class="flowing">
-        <h1>
-         <span>TAKAKI YUGA <br /></span>
-          PORTFOLIO <br />
-        </h1>
-        <p>一生残る 一瞬のリアルを切り取る</p>
-      </div>
+   <p class="flowing">TAKAKI YUGA</p>
+   <p class="flowing">PORTFOLIO</p>
+   <p class="flowing">一生残る 一瞬のリアルを切り取る</p>
+  </div>
   <!--スクロールを促すアイコン-->
 <div class="scroll"><img src="images/arrow1.gif" alt=""></div>
 </header>
