--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 <header>
   <div class="flowing">
-   <p class="flowing">TAKAKI YUGA</p>
-   <p class="flowing">PORTFOLIO</p>
-   <p class="flowing">一生残る 一瞬のリアルを切り取る</p>
+   <p>TAKAKI YUGA</p>
+   <p>PORTFOLIO</p>
+   <p>一生残る 一瞬のリアルを切り取る</p>
   </div>
   <!--スクロールを促すアイコン-->
 <div class="scroll"><img src="images/arrow1.gif" alt=""></div>
