--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
 
 <header>
   <div class="flowing">
-   <p>TAKAKI YUGA</p>
-   <p>PORTFOLIO</p>
-   <p>一生残る 一瞬のリアルを切り取る</p>
-  </div>
+        <h1>
+         <span>TAKAKI YUGA <br /></span>
+          PORTFOLIO <br />
+        </h1>
+        <p>一生残る 一瞬のリアルを切り取る</p>
+      </div>
   <!--スクロールを促すアイコン-->
 <div class="scroll"><img src="images/arrow1.gif" alt=""></div>
 </header>
