--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 <nav id="menubar">
 <ul>
 <li><a href="index.html">Home<span>ホーム</span></a></li>
-<li><a href="about.html">About<span>お店について</span></a></li>
-<li><a href="menu.html">Cafe Menu<span>メニューのご紹介</span></a></li>
-<li><a href="access.html">Access<span>アクセス</span></a></li>
+<li><a href="photo.html">PHOTO<span>写真</span></a></li>
+<li><a href="movie.html">MOVIE<span>動画</span></a></li>
+<li><a href="○○.html">○○<span>○○○○</span></a></li>
 </ul>
 </nav>
 
