--- a/photo.html
+++ b/photo.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio | PHOTO</title>
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
+<head>
+ <meta charset="UTF-8">
+ <title>example_infomation</title>
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+ <meta name="description" content="ここにサイト説明を入れます">
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vegas/2.5.4/vegas.min.css">
+ <link rel="stylesheet" href="css/style.css">
+</head>
 
   <body>
     <section class="photo">
       <h1>PHOTO</h1>
-      <img src="img/photo4.jpg" alt="" />
-      <img src="img/photo5.jpg" alt="" />
+      <img src="" alt="" />
+      <img src="" alt="" />
       <h2>「地球上に存在する生命力」</h2>
       <p>
         我々人類は、自然や生物と共存して生きています。また、そのすべてに生命力があります。これは我々が生きる社会でも同じです。さまざまな人間が共存しています。その生命力の一瞬を切り取れるよう撮影をしております。
