--- a/photo.html
+++ b/photo.html
@@ -19,8 +19,38 @@
         我々人類は、自然や生物と共存して生きています。また、そのすべてに生命力があります。これは我々が生きる社会でも同じです。さまざまな人間が共存しています。その生命力の一瞬を切り取れるよう撮影をしております。
       </p>
     </section>
-    <footer>
-      <p>Copyright © YUGA Portfolio</p>
-    </footer>
+   
+<footer>
+ <ul class="icon">
+  <li><a href="#"><img src="images/icon_facebook.png" alt="Facebook"></a></li>
+  <li><a href="#"><img src="images/icon_twitter.png" alt="Twitter"></a></li>
+  <li><a href="https://www.instagram.com/destinolij/"><img src="images/icon_instagram.png" alt="Instagram"></a></li>
+  <li><a href="#"><img src="images/icon_youtube.png" alt="YouTube"></a></li>
+  <li><a href="#"><img src="images/icon_line.png" alt="LINE"></a></li>
+ </ul>
+ <small>Copyright&copy; <a href="index.html">Sample Cafe</a> All Rights Reserved.</small>
+ <span class="pr"><a href="https://template-party.com/" target="_blank">《Web Design:Template-Party》</a></span>
+</footer>
+
+<!--メインメニュー-->
+<nav id="menubar">
+ <ul>
+  <li><a href="index.html">Home<span>ホーム</span></a></li>
+  <li><a href="photo.html">PHOTO<span>写真</span></a></li>
+  <li><a href="movie.html">MOVIE<span>動画</span></a></li>
+  <li><a href="○○.html">○○<span>○○○○</span></a></li>
+ </ul>
+</nav>
+
+<!--jQueryファイルの読み込み-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+<!--メニュー開閉用のスクリプト-->
+<div id="menubar_hdr"></div>
+<script src="js/openclose_tp.js"></script>
+
+<!--ページの上部へ戻るボタン-->
+<p class="pagetop"><a href="#">↑</a></p>
+
   </body>
 </html>
