--- a/photo.html
+++ b/photo.html
@@ -23,49 +23,49 @@
  <ul class="gallery">
   <li class="gallery-item">
    <figure>
-    <img src="" alt="写真：イメージ1">
+    <img src="images/1.jpg" alt="写真：イメージ1">
     <figcaption>ここにテキストが入ります。</figcaption>
    </figure>
   </li>
   <li class="gallery-item">
    <figure>
-    <img src="" alt="写真：イメージ2">
+    <img src="images/2.jpg" alt="写真：イメージ2">
     <figcaption>ここにテキストが入ります。</figcaption>
    </figure>
   </li>
   <li class="gallery-item">
    <figure>
-    <img src="" alt="写真：イメージ3">
+    <img src="images/3.jpg" alt="写真：イメージ3">
     <figcaption>ここにテキストが入ります。</figcaption>
    </figure>
   </li>
   <li class="gallery-item">
    <figure>
-    <img src="" alt="写真：イメージ4">
+    <img src="images/4.jpg" alt="写真：イメージ4">
     <figcaption>ここにテキストが入ります。</figcaption>
    </figure>
   </li>
   <li class="gallery-item">
    <figure>
-    <img src="" alt="写真：イメージ5">
+    <img src="images/5.jpg" alt="写真：イメージ5">
     <figcaption>ここにテキストが入ります。</figcaption>
    </figure>
   </li>
   <li class="gallery-item">
    <figure>
-    <img src="" alt="写真：イメージ6">
+    <img src="images/1.jpg" alt="写真：イメージ6">
     <figcaption>ここにテキストが入ります。</figcaption>
    </figure>
   </li>
   <li class="gallery-item">
    <figure>
-    <img src="" alt="写真：イメージ7">
+    <img src="images/2.jpg" alt="写真：イメージ7">
     <figcaption>ここにテキストが入ります。</figcaption>
    </figure>
   </li>
   <li class="gallery-item">
    <figure>
-    <img src="" alt="写真：イメージ8">
+    <img src="images/3.jpg" alt="写真：イメージ8">
     <figcaption>ここにテキストが入ります。</figcaption>
    </figure>
   </li>
