--- a/photo.html
+++ b/photo.html
@@ -8,7 +8,15 @@
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vegas/2.5.4/vegas.min.css">
  <link rel="stylesheet" href="css/style.css">
 </head>
-
+ 
+<header>
+  <div class="flowing">
+   <h1>sample_PHOTOs</h1>
+  </div>
+<!--スクロールを促すアイコン-->
+<div class="scroll"><img src="images/arrow1.gif" alt=""></div>
+</header>
+ 
   <body>
     <section class="photo">
       <h1>「地球上に存在する生命力」</h1>
