--- a/photo.html
+++ b/photo.html
@@ -9,21 +9,10 @@
  <link rel="stylesheet" href="css/style.css">
 </head>
  
-<header>
-  <div class="flowing">
-   <h1>sample_PHOTOs</h1>
-  </div>
-<!--スクロールを促すアイコン-->
-<div class="scroll"><img src="images/arrow1.gif" alt=""></div>
-</header>
- 
-  <body>
-    <section class="photo">
-      <h1>「地球上に存在する生命力」</h1>
-      <p>
-        我々人類は、自然や生物と共存して生きています。また、そのすべてに生命力があります。これは我々が生きる社会でも同じです。さまざまな人間が共存しています。その生命力の一瞬を切り取れるよう撮影をしております。
-      </p>
-    </section>
+<body>
+ <section class="photo">
+  <h1>sample_photps</h1>
+ </section>
    
  <ul class="gallery">
   <li class="gallery-item">
