--- a/photo.html
+++ b/photo.html
@@ -10,9 +10,13 @@
 </head>
  
 <body>
- <section class="photo">
-  <h1>sample_photos</h1>
- </section>
+ <header>
+  <div class="flowing">
+   <h1>sample_photos</h1>
+  </div>
+  <!--スクロールを促すアイコン-->
+  <div class="scroll"><img src="images/arrow1.gif" alt=""></div>
+ </header>
    
  <ul class="gallery">
   <li class="gallery-item">
