--- a/photo.html
+++ b/photo.html
@@ -9,8 +9,12 @@
  <link rel="stylesheet" href="css/style.css">
 </head>
  
-<body>
-   
+<body>  
+ <header>
+  <div class="flowing">
+   <h1>sample_photos</h1>
+  </div>
+ </header>
  <ul class="gallery">
   <li class="gallery-item">
    <figure>
