--- a/photo.html
+++ b/photo.html
@@ -12,7 +12,7 @@
 <body>  
  <header>
   <div class="flowing">
-   <h1>sample_photos</h1>
+   <h1>photos<span>写真</span></h1>
   </div>
  </header>
  <ul class="gallery">
