--- a/photo.html
+++ b/photo.html
@@ -10,10 +10,8 @@
 </head>
  
 <body>  
- <header>
-  <div class="photo">
+ <header class="photo">
    <h1>photos<span>写真</span></h1>
-  </div>
  </header>
  <ul class="gallery">
   <li class="gallery-item">
