--- a/photo.html
+++ b/photo.html
@@ -10,9 +10,9 @@
 </head>
  
 <body>  
- <header class="photo">
+ <div class="photo">
    <h1>photos<span>写真</span></h1>
- </header>
+ </div>
  <ul class="gallery">
   <li class="gallery-item">
    <figure>
