--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <main>
  <section>
-　  <h2>infomation<span>自己紹介</span></h2>
+　  <h2 class="blurstyle">infomation<span>自己紹介</span></h2>
   <div class="list2">
     <figure class="up">
      <img src="images/image02.jpg" alt="写真">
