--- a/photo.html
+++ b/photo.html
@@ -11,7 +11,7 @@
  
 <body>  
  <div class="photo">
-   <h1>photos<span>写真</span></h1>
+   <h1 class="blurstyle">photos<span>写真</span></h1>
  </div>
  <ul class="gallery">
   <li class="gallery-item">
