--- a/photo.html
+++ b/photo.html
@@ -72,8 +72,8 @@
 <nav id="menubar">
  <ul>
   <li><a href="index.html">Home<span>ホーム</span></a></li>
-  <li><a href="photo.html">PHOTO<span>写真</span></a></li>
-  <li><a href="movie.html">MOVIE<span>動画</span></a></li>
+  <li><a href="photo.html">Photos<span>写真</span></a></li>
+  <li><a href="movie.html">Movies<span>動画</span></a></li>
   <li><a href="○○.html">○○<span>○○○○</span></a></li>
  </ul>
 </nav>
