--- a/movie.html
+++ b/movie.html
@@ -8,11 +8,12 @@
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vegas/2.5.4/vegas.min.css">
  <link rel="stylesheet" href="css/style.css">
 </head>
+ 
+<body>  
+ <div class="photo">
+   <h1 class="blurstyle">movies<span>動画</span></h1>
+ </div>
 
-  <body>
-    <section class="movie">
-
-    </section>
    
 <footer>
  <ul class="icon">
@@ -45,6 +46,10 @@
 
 <!--ページの上部へ戻るボタン-->
 <p class="pagetop"><a href="#">↑</a></p>
+   
+   
+<!--photo.htmlで写真がゆっくり表示される-->
+<script src="js/photo.js"></script>
 
   </body>
 </html>
