--- a/movie.html
+++ b/movie.html
@@ -11,10 +11,45 @@
  
 <body>  
  <div class="photo">
-   <h1 class="blurstyle">movies<span>動画</span></h1>
+   <h1>movies<span>動画</span></h1>
  </div>
+ 
+<div id="contents">
+ 
+<section>
+         
+<div class="list">
+ <figure><img src="images/sample1.jpg" alt=""></figure>
+ <div class="text">
+  <h4>メニュータイトル　XXX円</h4>
+  <p>ここに説明を入れます。サンプルテキスト。ここに説明を入れます。サンプルテキスト。ここに説明を入れます。サンプルテキスト。ここに説明を入れます。サンプルテキスト。ここに説明を入れます。サンプルテキスト。ここに説明を入れます。</p>
+ </div>
+</div>
+ 
+<div class="list left">
+ <figure><img src="images/sample1.jpg" alt=""></figure>
+ <div class="text">
+ <h4>メニュータイトル<br>《<del>2,000円</del>→1,600円》</h4>
+ <p>&lt;div class=&quot;list left&quot;&gt;<br>
+とするとこのボックスの動作になります。<br>
+左上の「20%OFF」のテキストは直接html側で変更できます。色や配置などはcssフォルダのstyle.cssのoption3で調整できます。</p>
+ </div>
+</div>
+ 
+<div class="list right">
+ <figure><img src="images/sample1.jpg" alt=""></figure>
+ <div class="text">
+ <h4>メニュータイトル<br>《<del>2,000円</del>→1,400円》</h4>
+ <p>&lt;div class=&quot;list right&quot;&gt;<br>
+とするとこのボックスの動作になります。<br>
+左上の「30%OFF」のテキストは直接html側で変更できます。色や配置などはcssフォルダのstyle.cssのoption3で調整できます。</p>
+ </div>
+</div>
+ 
+</section>
 
-   
+</div>
+
 <footer>
  <ul class="icon">
   <li><a href="#"><img src="images/icon_facebook.png" alt="Facebook"></a></li>
@@ -46,7 +81,6 @@
 
 <!--ページの上部へ戻るボタン-->
 <p class="pagetop"><a href="#">↑</a></p>
-   
    
 <!--photo.htmlで写真がゆっくり表示される-->
 <script src="js/photo.js"></script>
