--- a/movie.html
+++ b/movie.html
@@ -84,6 +84,9 @@
    
 <!--photo.htmlで写真がゆっくり表示される-->
 <script src="js/photo.js"></script>
-
+ 
+<!--movie.htmlで写真がゆっくり表示される-->
+<script src="js/jquery.inview_set.js"></script>
+ 
   </body>
 </html>
