--- a/movie.html
+++ b/movie.html
@@ -18,7 +18,7 @@
  
 <section>
          
-<div class="list">
+<div class="list2">
  <figure><img src="images/sample1.jpg" alt=""></figure>
  <div class="text">
   <h4>メニュータイトル　XXX円</h4>
@@ -26,7 +26,7 @@
  </div>
 </div>
  
-<div class="list left">
+<div class="list2 left">
  <figure><img src="images/sample1.jpg" alt=""></figure>
  <div class="text">
  <h4>メニュータイトル<br>《<del>2,000円</del>→1,600円》</h4>
@@ -36,7 +36,7 @@
  </div>
 </div>
  
-<div class="list right">
+<div class="list2 right">
  <figure><img src="images/sample1.jpg" alt=""></figure>
  <div class="text">
  <h4>メニュータイトル<br>《<del>2,000円</del>→1,400円》</h4>
