--- a/movie.html
+++ b/movie.html
@@ -19,7 +19,7 @@
 <section>
          
 <div class="list3">
- <figure><img src="images/sample1.jpg" alt=""></figure>
+ <figure><img src="images/1.jpg" alt=""></figure>
  <div class="text">
   <h4>メニュータイトル　XXX円</h4>
   <p>ここに説明を入れます。サンプルテキスト。ここに説明を入れます。サンプルテキスト。ここに説明を入れます。サンプルテキスト。ここに説明を入れます。サンプルテキスト。ここに説明を入れます。サンプルテキスト。ここに説明を入れます。</p>
@@ -27,7 +27,7 @@
 </div>
  
 <div class="list3 left">
- <figure><img src="images/sample1.jpg" alt=""></figure>
+ <figure><img src="images/2.jpg" alt=""></figure>
  <div class="text">
  <h4>メニュータイトル<br>《<del>2,000円</del>→1,600円》</h4>
  <p>&lt;div class=&quot;list left&quot;&gt;<br>
@@ -37,7 +37,7 @@
 </div>
  
 <div class="list3 right">
- <figure><img src="images/sample1.jpg" alt=""></figure>
+ <figure><img src="images/3.jpg" alt=""></figure>
  <div class="text">
  <h4>メニュータイトル<br>《<del>2,000円</del>→1,400円》</h4>
  <p>&lt;div class=&quot;list right&quot;&gt;<br>
