--- a/movie.html
+++ b/movie.html
@@ -29,20 +29,16 @@
 <div class="list3 left">
  <figure><img src="images/3.jpg" alt=""></figure>
  <div class="text">
- <h4>メニュータイトル<br>《<del>2,000円</del>→1,600円》</h4>
- <p>&lt;div class=&quot;list left&quot;&gt;<br>
-とするとこのボックスの動作になります。<br>
-左上の「20%OFF」のテキストは直接html側で変更できます。色や配置などはcssフォルダのstyle.cssのoption3で調整できます。</p>
+  <h4>メニュータイトル　XXX円</h4>
+  <p>ここに説明を入れます。サンプルテキスト。ここに説明を入れます。サンプルテキスト。ここに説明を入れます。サンプルテキスト。ここに説明を入れます。サンプルテキスト。ここに説明を入れます。サンプルテキスト。ここに説明を入れます。</p>
  </div>
 </div>
  
 <div class="list3 right">
  <figure><img src="images/2.jpg" alt=""></figure>
  <div class="text">
- <h4>メニュータイトル<br>《<del>2,000円</del>→1,400円》</h4>
- <p>&lt;div class=&quot;list right&quot;&gt;<br>
-とするとこのボックスの動作になります。<br>
-左上の「30%OFF」のテキストは直接html側で変更できます。色や配置などはcssフォルダのstyle.cssのoption3で調整できます。</p>
+  <h4>メニュータイトル　XXX円</h4>
+  <p>ここに説明を入れます。サンプルテキスト。ここに説明を入れます。サンプルテキスト。ここに説明を入れます。サンプルテキスト。ここに説明を入れます。サンプルテキスト。ここに説明を入れます。サンプルテキスト。ここに説明を入れます。</p>
  </div>
 </div>
  
