--- a/movie.html
+++ b/movie.html
@@ -70,6 +70,11 @@
 
 <!--jQueryファイルの読み込み-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+ 
+ 
+<!--パララックス（inview）-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/protonet-jquery.inview/1.1.2/jquery.inview.min.js"></script>
+<script src="js/jquery.inview_set.js"></script>
 
 <!--メニュー開閉用のスクリプト-->
 <div id="menubar_hdr"></div>
@@ -77,9 +82,6 @@
 
 <!--ページの上部へ戻るボタン-->
 <p class="pagetop"><a href="#">↑</a></p>
-   
-<!--movie.htmlで写真がゆっくり表示される-->
-<script src="js/jquery.inview_set.js"></script>
  
   </body>
 </html>
