--- a/movie.html
+++ b/movie.html
@@ -42,6 +42,22 @@
  </div>
 </div>
  
+<div class="list3 left">
+ <figure><img src="images/3.jpg" alt=""></figure>
+ <div class="text">
+  <h4>メニュータイトル　XXX円</h4>
+  <p>ここに説明を入れます。サンプルテキスト。ここに説明を入れます。サンプルテキスト。ここに説明を入れます。サンプルテキスト。ここに説明を入れます。サンプルテキスト。ここに説明を入れます。サンプルテキスト。ここに説明を入れます。</p>
+ </div>
+</div>
+ 
+<div class="list3 right">
+ <figure><img src="images/2.jpg" alt=""></figure>
+ <div class="text">
+  <h4>メニュータイトル　XXX円</h4>
+  <p>ここに説明を入れます。サンプルテキスト。ここに説明を入れます。サンプルテキスト。ここに説明を入れます。サンプルテキスト。ここに説明を入れます。サンプルテキスト。ここに説明を入れます。サンプルテキスト。ここに説明を入れます。</p>
+ </div>
+</div>
+ 
 </section>
 
 </div>
