--- a/movie.html
+++ b/movie.html
@@ -18,7 +18,7 @@
  
 <section>
          
-<div class="list3">
+<div class="list3 up">
  <figure><img src="images/2.jpg" alt=""></figure>
  <div class="text">
   <h4>メニュータイトル　XXX円</h4>
