--- a/photo.html
+++ b/photo.html
@@ -13,43 +13,43 @@
  <div class="photo">
    <h1 class="blurstyle">photos<span>写真</span></h1>
  </div>
- <ul class="gallery">
-  <li class="gallery-item">
+<ul class="randomScroll">
+  <li class="box">
    <figure>
     <img src="images/1.jpg" alt="写真：イメージ1">
    </figure>
   </li>
-  <li class="gallery-item">
+  <li class="box">
    <figure>
     <img src="images/2.jpg" alt="写真：イメージ2">
    </figure>
   </li>
-  <li class="gallery-item">
+  <li class="box">
    <figure>
     <img src="images/3.jpg" alt="写真：イメージ3">
    </figure>
   </li>
-  <li class="gallery-item">
+  <li class="box">
    <figure>
     <img src="images/4.jpg" alt="写真：イメージ4">
    </figure>
   </li>
-  <li class="gallery-item">
+  <li class="box">
    <figure>
     <img src="images/5.jpg" alt="写真：イメージ5">
    </figure>
   </li>
-  <li class="gallery-item">
+  <li class="box">
    <figure>
     <img src="images/1.jpg" alt="写真：イメージ6">
    </figure>
   </li>
-  <li class="gallery-item">
+  <li class="box">
    <figure>
     <img src="images/2.jpg" alt="写真：イメージ7">
    </figure>
   </li>
-  <li class="gallery-item">
+  <li class="box">
    <figure>
     <img src="images/3.jpg" alt="写真：イメージ8">
    </figure>
