--- a/photo.html
+++ b/photo.html
@@ -13,7 +13,12 @@
  <div class="photo">
    <h1 class="blurstyle">photos<span>写真</span></h1>
  </div>
-<ul class="randomScroll">
+ <ul class="navmenu">
+  <li class="current"><a href="lunch.html">風景</a></li>
+  <li><a href="course.html">人物</a></li>
+  <li><a href="takeout.html">自然</a></li>
+ </ul>
+ <ul class="randomScroll">
   <li class="box">
    <figure>
     <img src="images/1.jpg" alt="写真：イメージ1">
@@ -54,7 +59,7 @@
     <img src="images/3.jpg" alt="写真：イメージ8">
    </figure>
   </li>
-</ul>
+ </ul>
    
 <footer>
  <ul class="icon">
