--- a/photo.html
+++ b/photo.html
@@ -14,9 +14,9 @@
    <h1 class="blurstyle">photos<span>写真</span></h1>
  </div>
  <ul class="navmenu">
-  <li class="current"><a href="lunch.html">風景</a></li>
-  <li><a href="course.html">人物</a></li>
-  <li><a href="takeout.html">自然</a></li>
+  <li class="current"><a href="photo.html">風景</a></li>
+  <li><a href="photo_person.html">人物</a></li>
+  <li><a href="photo_nature.html">自然</a></li>
  </ul>
  <ul class="randomScroll">
   <li class="box">
