--- a/photo_person.html
+++ b/photo_person.html
@@ -16,7 +16,7 @@
  <ul class="navmenu">
   <li><a href="photo.html">風景</a></li>
   <li class="current"><a href="photo_person.html">人物</a></li>
-  <li><a href="takeout.html">自然</a></li>
+  <li><a href="photo_nature.html">自然</a></li>
  </ul>
  <ul class="randomScroll">
   <li class="box">
