--- a/photo_person.html
+++ b/photo_person.html
@@ -18,7 +18,7 @@
   <li class="current"><a href="photo_person.html">人物</a></li>
   <li><a href="photo_nature.html">自然</a></li>
  </ul>
- <ul class="randomScroll">
+ <ul class="flex delayScroll">
   <li class="box">
    <figure>
     <img src="images/1.jpg" alt="写真：イメージ1">
