--- a/movie.html
+++ b/movie.html
@@ -19,7 +19,7 @@
 <section>
          
 <div class="list3 up">
- <figure> <a href="https://www.youtube.com/watch?v=DyhJPONVJDs&feature=youtu.be" target="_blank"><img src="images/2.jpg" alt=""></figure>
+ <figure><img src="images/2.jpg" alt=""></figure>
  <div class="text">
   <h4>崇城大学PR動画制作①「上り続ける未来へ」</h4>
   <p>2018年2月　30秒<br />
