--- a/movie.html
+++ b/movie.html
@@ -19,7 +19,7 @@
 <section>
          
 <div class="list3 up">
- <figure><img src="images/2.jpg" alt=""></figure>
+ <figure><a href="https://www.youtube.com/watch?v=DyhJPONVJDs&feature=youtu.be" target="_blank"><img src="images/2.jpg" alt=""></figure>
  <div class="text">
   <h4>崇城大学PR動画制作①「上り続ける未来へ」</h4>
   <p>2018年2月　30秒<br />
@@ -28,7 +28,7 @@
 </div>
  
 <div class="list3 left">
- <figure><img src="images/3.jpg" alt=""><a href="https://www.youtube.com/watch?v=xKLlIcW5mqY&feature=youtu.be" target="_blank"></figure>
+ <figure><a href="https://www.youtube.com/watch?v=xKLlIcW5mqY&feature=youtu.be" target="_blank"><img src="images/3.jpg" alt=""></figure>
  <div class="text">
   <h4>崇城大学PR動画制作②「10年前の私へ」</h4>
   <p>2018年2月　30秒<br />
