--- a/movie.html
+++ b/movie.html
@@ -69,7 +69,7 @@
  <div class="text">
   <h4>ボウリング宣伝動画</h4>
   <p>2021年8月　1分25秒<br />
-     アミューズメント施設内にあるボウリング場での定期イベントの宣伝動画です。若年層をターゲットにし、映像を制作しました。ボウリングそのものの楽しさに加え、ストライクサービスというイベントをスタッフとお客様が一緒になって作り上げることの楽しさ・ワクワクを表現出来るように撮影・編集を行いました。/p>
+     アミューズメント施設内にあるボウリング場での定期イベントの宣伝動画です。若年層をターゲットにし、映像を制作しました。ボウリングそのものの楽しさに加え、ストライクサービスというイベントをスタッフとお客様が一緒になって作り上げることの楽しさ・ワクワクを表現出来るように撮影・編集を行いました。</p>
  </div>
 </div>
  
