--- a/movie.html
+++ b/movie.html
@@ -19,7 +19,7 @@
 <section>
          
 <div class="list3 up">
- <figure><a href="https://www.youtube.com/watch?v=DyhJPONVJDs&feature=youtu.be" target="_blank"><img src="images/2.jpg" alt=""></figure>
+ <figure><a href="https://www.youtube.com/watch?v=DyhJPONVJDs&feature=youtu.be" target="_blank"><img src="images/2.jpg" alt=""></a></figure>
  <div class="text">
   <h4>崇城大学PR動画制作①「上り続ける未来へ」</h4>
   <p>2018年2月　30秒<br />
@@ -28,7 +28,7 @@
 </div>
  
 <div class="list3 left">
- <figure><a href="https://www.youtube.com/watch?v=xKLlIcW5mqY&feature=youtu.be" target="_blank"><img src="images/3.jpg" alt=""></figure>
+ <figure><a href="https://www.youtube.com/watch?v=xKLlIcW5mqY&feature=youtu.be" target="_blank"><img src="images/3.jpg" alt=""></a></figure>
  <div class="text">
   <h4>崇城大学PR動画制作②「10年前の私へ」</h4>
   <p>2018年2月　30秒<br />
@@ -37,7 +37,7 @@
 </div>
  
 <div class="list3 right">
- <figure><a href="https://youtu.be/jsLEUb7eLTk" target="_blank"><img src="images/2.jpg" alt=""></figure>
+ <figure><a href="https://youtu.be/jsLEUb7eLTk" target="_blank"><img src="images/2.jpg" alt=""></a></figure>
  <div class="text">
   <h4>崇城大学芸術学部卒業展・大学院芸術研究科修了展2020</h4>
   <p>2020年3月　3分48秒<br />
@@ -47,7 +47,7 @@
 </div>
  
 <div class="list3 left">
- <figure><a href="https://www.youtube.com/watch?v=Voab8SagmLA&feature=youtu.be" target="_blank"><img src="images/3.jpg" alt=""></figure>
+ <figure><a href="https://www.youtube.com/watch?v=Voab8SagmLA&feature=youtu.be" target="_blank"><img src="images/3.jpg" alt=""></a></figure>
  <div class="text">
   <h4>Re:vive</h4>
   <p>2020年12月　3分5秒<br />
@@ -56,7 +56,7 @@
 </div>
  
 <div class="list3 right">
- <figure><a href="https://youtu.be/d9GGICSYtuA" target="_blank"><img src="images/2.jpg" alt=""></figure>
+ <figure><a href="https://youtu.be/d9GGICSYtuA" target="_blank"><img src="images/2.jpg" alt=""></a></figure>
  <div class="text">
   <h4>FOCUS</h4>
   <p>2021年1月　30秒<br />
@@ -65,7 +65,7 @@
 </div>
  
  <div class="list3 left">
- <figure><a href="https://www.youtube.com/watch?v=E1_qOa_T82Y" target="_blank"><img src="images/3.jpg" alt=""></figure>
+ <figure><a href="https://www.youtube.com/watch?v=E1_qOa_T82Y" target="_blank"><img src="images/3.jpg" alt=""></a></figure>
  <div class="text">
   <h4>ボウリング宣伝動画</h4>
   <p>2021年8月　1分25秒<br />
