--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
   <li><a href="#"><img src="images/icon_youtube.png" alt="YouTube"></a></li>
   <li><a href="#"><img src="images/icon_line.png" alt="LINE"></a></li>
  </ul>
- <small>Copyright&copy; <a href="index.html">Sample Cafe</a> All Rights Reserved.</small>
- <span class="pr"><a href="https://template-party.com/" target="_blank">《Web Design:Template-Party》</a></span>
+ <small>Copyright&copy;</small>
 </footer>
 
 <!--メインメニュー-->
