--- a/photo.html
+++ b/photo.html
@@ -16,47 +16,22 @@
  <ul class="navmenu">
   <li class="current"><a href="photo.html">風景</a></li>
   <li><a href="photo_person.html">人物</a></li>
-  <li><a href="photo_nature.html">自然</a></li>
+  <li><a href="photo_nature.html">その他</a></li>
  </ul>
  <ul class="flex delayScroll">
   <li class="box">
    <figure>
-    <img src="images/1.jpg" alt="写真：イメージ1">
+    <img src="images/photo01.jpg" alt="写真：イメージ1">
    </figure>
   </li>
   <li class="box">
    <figure>
-    <img src="images/2.jpg" alt="写真：イメージ2">
+    <img src="images/photo02.jpg" alt="写真：イメージ2">
    </figure>
   </li>
   <li class="box">
    <figure>
-    <img src="images/3.jpg" alt="写真：イメージ3">
-   </figure>
-  </li>
-  <li class="box">
-   <figure>
-    <img src="images/4.jpg" alt="写真：イメージ4">
-   </figure>
-  </li>
-  <li class="box">
-   <figure>
-    <img src="images/5.jpg" alt="写真：イメージ5">
-   </figure>
-  </li>
-  <li class="box">
-   <figure>
-    <img src="images/1.jpg" alt="写真：イメージ6">
-   </figure>
-  </li>
-  <li class="box">
-   <figure>
-    <img src="images/2.jpg" alt="写真：イメージ7">
-   </figure>
-  </li>
-  <li class="box">
-   <figure>
-    <img src="images/3.jpg" alt="写真：イメージ8">
+    <img src="images/photo06.jpg" alt="写真：イメージ3">
    </figure>
   </li>
  </ul>
