--- a/photo.html
+++ b/photo.html
@@ -16,7 +16,7 @@
  <ul class="navmenu">
   <li class="current"><a href="photo.html">風景</a></li>
   <li><a href="photo_person.html">人物</a></li>
-  <li><a href="photo_nature.html">その他</a></li>
+  <li><a href="photo_other.html">その他</a></li>
  </ul>
  <ul class="flex delayScroll">
   <li class="box">
