--- a/photo_other.html
+++ b/photo_other.html
@@ -21,6 +21,16 @@
  <ul class="flex delayScroll">
   <li class="box">
    <figure>
+    <img src="images/photo03.jpg" alt="写真：イメージ1">
+   </figure>
+  </li>
+  <li class="box">
+   <figure>
+    <img src="images/photo04.jpg" alt="写真：イメージ2">
+   </figure>
+  </li>
+  <li class="box">
+   <figure>
     <img src="images/photo05.jpg" alt="写真：イメージ1">
    </figure>
   </li>
@@ -31,7 +41,17 @@
   </li>
   <li class="box">
    <figure>
+    <img src="images/photo08.jpg" alt="写真：イメージ2">
+   </figure>
+  </li>
+  <li class="box">
+   <figure>
     <img src="images/photo09.jpg" alt="写真：イメージ3">
+   </figure>
+  </li>
+  <li class="box">
+   <figure>
+    <img src="images/photo10.jpg" alt="写真：イメージ3">
    </figure>
   </li>
  </ul>
