--- a/movie.html
+++ b/movie.html
@@ -18,7 +18,7 @@
  <section>
          
   <div class="list3 up">
-   <figure><a href="https://www.youtube.com/watch?v=DyhJPONVJDs&feature=youtu.be" target="_blank"><img src="images/2.jpg" alt=""></a></figure>
+   <figure><a href="https://www.youtube.com/watch?v=DyhJPONVJDs&feature=youtu.be" target="_blank"><img src="images/movie01.png" alt=""></a></figure>
    <div class="text">
     <h4>崇城大学PR動画制作①「上り続ける未来へ」<br />
     <p>2018年2月　34秒</p></h4>
@@ -27,7 +27,7 @@
   </div>
  
   <div class="list3 left">
-   <figure><a href="https://www.youtube.com/watch?v=xKLlIcW5mqY&feature=youtu.be" target="_blank"><img src="images/3.jpg" alt=""></a></figure>
+   <figure><a href="https://www.youtube.com/watch?v=xKLlIcW5mqY&feature=youtu.be" target="_blank"><img src="images/movie02.jpg" alt=""></a></figure>
    <div class="text">
     <h4>崇城大学PR動画制作②「10年前の私へ」<br />
     <p>2018年2月　31秒</p></h4>
@@ -36,7 +36,7 @@
   </div>
  
   <div class="list3 right">
-   <figure><a href="https://youtu.be/jsLEUb7eLTk" target="_blank"><img src="images/2.jpg" alt=""></a></figure>
+   <figure><a href="https://youtu.be/jsLEUb7eLTk" target="_blank"><img src="images/movie03.png" alt=""></a></figure>
    <div class="text">
     <h4>崇城大学芸術学部卒業展・大学院芸術研究科修了展2020<br />
     <p>2020年3月　3分48秒</p></h4>
@@ -46,7 +46,7 @@
   </div>
  
   <div class="list3 left">
-   <figure><a href="https://www.youtube.com/watch?v=Voab8SagmLA&feature=youtu.be" target="_blank"><img src="images/3.jpg" alt=""></a></figure>
+   <figure><a href="https://www.youtube.com/watch?v=Voab8SagmLA&feature=youtu.be" target="_blank"><img src="images/movie04.png" alt=""></a></figure>
    <div class="text">
     <h4>Re:vive<br />
     <p>2020年12月　3分6秒</p></h4>
@@ -55,7 +55,7 @@
   </div>
  
   <div class="list3 right">
-   <figure><a href="https://youtu.be/d9GGICSYtuA" target="_blank"><img src="images/2.jpg" alt=""></a></figure>
+   <figure><a href="https://youtu.be/d9GGICSYtuA" target="_blank"><img src="images/movie05.png" alt=""></a></figure>
    <div class="text">
     <h4>FOCUS<br />
     <p>2021年1月　30秒</p></h4>
@@ -64,7 +64,7 @@
   </div>
  
   <div class="list3 left">
-   <figure><a href="https://www.youtube.com/watch?v=E1_qOa_T82Y" target="_blank"><img src="images/3.jpg" alt=""></a></figure>
+   <figure><a href="https://www.youtube.com/watch?v=E1_qOa_T82Y" target="_blank"><img src="images/movie06.jpg" alt=""></a></figure>
    <div class="text">
     <h4>ボウリング宣伝動画<br />
     <p>2021年8月　1分25秒</p></h4>
