--- a/photo.html
+++ b/photo.html
@@ -18,23 +18,25 @@
   <li><a href="photo_person.html">人物</a></li>
   <li><a href="photo_other.html">その他</a></li>
  </ul>
+ <div id="modal-container">
  <ul class="flex delayScroll">
   <li class="box">
    <figure>
-    <img src="images/photo01.jpg" alt="写真：イメージ1">
+    <img src="images/photo01.jpg" alt="写真：イメージ1" class="popup">
    </figure>
   </li>
   <li class="box">
    <figure>
-    <img src="images/photo02.jpg" alt="写真：イメージ2">
+    <img src="images/photo02.jpg" alt="写真：イメージ2" class="popup">
    </figure>
   </li>
   <li class="box">
    <figure>
-    <img src="images/photo06.jpg" alt="写真：イメージ3">
+    <img src="images/photo06.jpg" alt="写真：イメージ3" class="popup">
    </figure>
   </li>
  </ul>
+ </div>
    
 <footer>
  <ul class="icon">
