--- a/photo.html
+++ b/photo.html
@@ -17,21 +17,32 @@
   <li class="current"><a href="photo.html">風景</a></li>
   <li><a href="photo_person.html">人物</a></li>
   <li><a href="photo_other.html">その他</a></li>
- </ul>
  <ul class="flex delayScroll">
   <li class="box">
-   <figure>
-    <img src="images/photo01.jpg" alt="写真：イメージ1">
+   <a href="#figure"><img src="images/photo01.jpg" alt=""></a>
+   <figure id="figure">
+    <a id="overlay" href="#overlay">
+     <img src="images/photo01.jpg" alt="写真：イメージ1">
+     <figcaption>どこかをクリックすると画面をを閉じます</figcaption>
+    </a>
    </figure>
   </li>
   <li class="box">
-   <figure>
-    <img src="images/photo02.jpg" alt="写真：イメージ2">
+   <a href="#figure"><img src="images/photo02.jpg" alt=""></a>
+   <figure id="figure">
+    <a id="overlay" href="#overlay">
+     <img src="images/photo02.jpg" alt="写真：イメージ1">
+     <figcaption>どこかをクリックすると画面をを閉じます</figcaption>
+    </a>
    </figure>
   </li>
   <li class="box">
-   <figure>
-    <img src="images/photo06.jpg" alt="写真：イメージ3">
+   <a href="#figure"><img src="images/photo03.jpg" alt=""></a>
+   <figure id="figure">
+    <a id="overlay" href="#overlay">
+     <img src="images/photo03.jpg" alt="写真：イメージ1">
+     <figcaption>どこかをクリックすると画面をを閉じます</figcaption>
+    </a>
    </figure>
   </li>
  </ul>
