--- a/photo.html
+++ b/photo.html
@@ -19,30 +19,18 @@
   <li><a href="photo_other.html">その他</a></li>
  <ul class="flex delayScroll">
   <li class="box">
-   <a href="#figure"><img src="images/photo01.jpg" alt=""></a>
-   <figure id="figure">
-    <a id="overlay" href="#overlay">
-     <img src="images/photo01.jpg" alt="写真：イメージ1">
-     <figcaption>どこかをクリックすると画面をを閉じます</figcaption>
-    </a>
+   <figure>
+    <img src="images/photo01.jpg" alt="写真：イメージ1">
    </figure>
   </li>
   <li class="box">
-   <a href="#figure"><img src="images/photo02.jpg" alt=""></a>
-   <figure id="figure">
-    <a id="overlay" href="#overlay">
-     <img src="images/photo02.jpg" alt="写真：イメージ1">
-     <figcaption>どこかをクリックすると画面をを閉じます</figcaption>
-    </a>
+   <figure>
+    <img src="images/photo02.jpg" alt="写真：イメージ2">
    </figure>
   </li>
   <li class="box">
-   <a href="#figure"><img src="images/photo03.jpg" alt=""></a>
-   <figure id="figure">
-    <a id="overlay" href="#overlay">
-     <img src="images/photo03.jpg" alt="写真：イメージ1">
-     <figcaption>どこかをクリックすると画面をを閉じます</figcaption>
-    </a>
+   <figure>
+    <img src="images/photo06.jpg" alt="写真：イメージ3">
    </figure>
   </li>
  </ul>
