--- a/photo.html
+++ b/photo.html
@@ -14,23 +14,44 @@
    <h1 class="blurstyle">photos<span>写真</span></h1>
  </div>
  <ul class="navmenu">
-  <li class="current"><a href="photo.html">風景</a></li>
+  <li><a href="photo.html">風景</a></li>
   <li><a href="photo_person.html">人物</a></li>
-  <li><a href="photo_other.html">その他</a></li>
+  <li class="current"><a href="photo_other.html">その他</a></li>
+ </ul>
  <ul class="flex delayScroll">
   <li class="box">
    <figure>
-    <img src="images/photo01.jpg" alt="写真：イメージ1">
+    <img src="images/photo03.jpg" alt="写真：イメージ1">
    </figure>
   </li>
   <li class="box">
    <figure>
-    <img src="images/photo02.jpg" alt="写真：イメージ2">
+    <img src="images/photo04.jpg" alt="写真：イメージ2">
    </figure>
   </li>
   <li class="box">
    <figure>
-    <img src="images/photo06.jpg" alt="写真：イメージ3">
+    <img src="images/photo05.jpg" alt="写真：イメージ1">
+   </figure>
+  </li>
+  <li class="box">
+   <figure>
+    <img src="images/photo07.jpg" alt="写真：イメージ2">
+   </figure>
+  </li>
+  <li class="box">
+   <figure>
+    <img src="images/photo08.jpg" alt="写真：イメージ2">
+   </figure>
+  </li>
+  <li class="box">
+   <figure>
+    <img src="images/photo09.jpg" alt="写真：イメージ3">
+   </figure>
+  </li>
+  <li class="box">
+   <figure>
+    <img src="images/photo10.jpg" alt="写真：イメージ3">
    </figure>
   </li>
  </ul>
@@ -54,6 +75,23 @@
   <li><a href="movie.html">Movies<span>動画</span></a></li>
  </ul>
 </nav>
+  <ul class="flex delayScroll">
+  <li class="box">
+   <figure>
+    <img src="images/photo01.jpg" alt="写真：イメージ1">
+   </figure>
+  </li>
+  <li class="box">
+   <figure>
+    <img src="images/photo02.jpg" alt="写真：イメージ2">
+   </figure>
+  </li>
+  <li class="box">
+   <figure>
+    <img src="images/photo06.jpg" alt="写真：イメージ3">
+   </figure>
+  </li>
+ </ul>
 
 <!--jQueryファイルの読み込み-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
