--- a/photo.html
+++ b/photo.html
@@ -20,38 +20,30 @@
  </ul>
  <ul class="flex delayScroll">
   <li class="box">
-   <figure>
-    <img src="images/photo03.jpg" alt="写真：イメージ1">
+   <a href="#figure"><img src="images/photo01.jpg" alt=""></a>
+   <figure id="figure">
+    <a id="overlay" href="#overlay">
+     <img src="images/photo01.jpg" alt="写真：イメージ1">
+     <figcaption>どこかをクリックすると画面をを閉じます</figcaption>
+    </a>
    </figure>
   </li>
   <li class="box">
-   <figure>
-    <img src="images/photo04.jpg" alt="写真：イメージ2">
+   <a href="#figure"><img src="images/photo02.jpg" alt=""></a>
+   <figure id="figure">
+    <a id="overlay" href="#overlay">
+     <img src="images/photo02.jpg" alt="写真：イメージ1">
+     <figcaption>どこかをクリックすると画面をを閉じます</figcaption>
+    </a>
    </figure>
   </li>
   <li class="box">
-   <figure>
-    <img src="images/photo05.jpg" alt="写真：イメージ1">
-   </figure>
-  </li>
-  <li class="box">
-   <figure>
-    <img src="images/photo07.jpg" alt="写真：イメージ2">
-   </figure>
-  </li>
-  <li class="box">
-   <figure>
-    <img src="images/photo08.jpg" alt="写真：イメージ2">
-   </figure>
-  </li>
-  <li class="box">
-   <figure>
-    <img src="images/photo09.jpg" alt="写真：イメージ3">
-   </figure>
-  </li>
-  <li class="box">
-   <figure>
-    <img src="images/photo10.jpg" alt="写真：イメージ3">
+   <a href="#figure"><img src="images/photo03.jpg" alt=""></a>
+   <figure id="figure">
+    <a id="overlay" href="#overlay">
+     <img src="images/photo03.jpg" alt="写真：イメージ1">
+     <figcaption>どこかをクリックすると画面をを閉じます</figcaption>
+    </a>
    </figure>
   </li>
  </ul>
