--- a/photo.html
+++ b/photo.html
@@ -21,8 +21,8 @@
  <ul class="flex delayScroll">
   <li class="box">
    <a href="#figure"><img src="images/photo01.jpg" alt=""></a>
-   <figure id="figure">
-    <a id="overlay" href="#overlay">
+   <figure class="figure">
+    <a class="overlay" href="#overlay">
      <img src="images/photo01.jpg" alt="写真：イメージ1">
      <figcaption>どこかをクリックすると画面をを閉じます</figcaption>
     </a>
@@ -30,8 +30,8 @@
   </li>
   <li class="box">
    <a href="#figure"><img src="images/photo02.jpg" alt=""></a>
-   <figure id="figure">
-    <a id="overlay" href="#overlay">
+   <figure class="figure">
+    <a class="overlay" href="#overlay">
      <img src="images/photo02.jpg" alt="写真：イメージ1">
      <figcaption>どこかをクリックすると画面をを閉じます</figcaption>
     </a>
@@ -39,14 +39,15 @@
   </li>
   <li class="box">
    <a href="#figure"><img src="images/photo03.jpg" alt=""></a>
-   <figure id="figure">
-    <a id="overlay" href="#overlay">
+   <figure class="figure">
+    <a class="overlay" href="#overlay">
      <img src="images/photo03.jpg" alt="写真：イメージ1">
      <figcaption>どこかをクリックすると画面をを閉じます</figcaption>
     </a>
    </figure>
   </li>
  </ul>
+
    
 <footer>
  <ul class="icon">
