--- a/photo.html
+++ b/photo.html
@@ -18,36 +18,37 @@
   <li><a href="photo_person.html">人物</a></li>
   <li><a href="photo_other.html">その他</a></li>
  </ul>
- <ul class="flex delayScroll">
-  <li class="box">
-   <a href="#figure"><img src="images/photo01.jpg" alt=""></a>
-   <figure class="figure">
-    <a class="overlay" href="#overlay">
-     <img src="images/photo01.jpg" alt="写真：イメージ1">
-     <figcaption>どこかをクリックすると画面をを閉じます</figcaption>
+ 
+ <div id="flex delayScroll">
+ <div id="sample">
+  <a href="#figure"><img src="images/photo01.jpg" alt=""></a>
+  <figure id="figure">
+    <a id="overlay" href="#overlay">
+      <img src="images/photo01.jpg" alt="">
+      <figcaption>どこかをクリックすると画面をを閉じます</figcaption>
     </a>
-   </figure>
-  </li>
-  <li class="box">
-   <a href="#figure"><img src="images/photo02.jpg" alt=""></a>
-   <figure class="figure">
-    <a class="overlay" href="#overlay">
-     <img src="images/photo02.jpg" alt="写真：イメージ1">
-     <figcaption>どこかをクリックすると画面をを閉じます</figcaption>
+  </figure>
+ </div>
+ <div id="sample">
+  <a href="#figure"><img src="images/photo02.jpg" alt=""></a>
+  <figure id="figure">
+    <a id="overlay" href="#overlay">
+      <img src="images/photo02.jpg" alt="">
+      <figcaption>どこかをクリックすると画面をを閉じます</figcaption>
     </a>
-   </figure>
-  </li>
-  <li class="box">
-   <a href="#figure"><img src="images/photo03.jpg" alt=""></a>
-   <figure class="figure">
-    <a class="overlay" href="#overlay">
-     <img src="images/photo03.jpg" alt="写真：イメージ1">
-     <figcaption>どこかをクリックすると画面をを閉じます</figcaption>
+  </figure>
+ </div>
+ <div id="sample">
+  <a href="#figure"><img src="images/photo03.jpg" alt=""></a>
+  <figure id="figure">
+    <a id="overlay" href="#overlay">
+      <img src="images/photo03.jpg" alt="">
+      <figcaption>どこかをクリックすると画面をを閉じます</figcaption>
     </a>
-   </figure>
-  </li>
- </ul>
-
+  </figure>
+ </div>
+ </div>
+ 
 <footer>
  <ul class="icon">
   <li><a href="#"><img src="images/icon_facebook.png" alt="Facebook"></a></li>
