--- a/photo.html
+++ b/photo.html
@@ -36,6 +36,10 @@
    </figure>
   </li>
  </ul>
+ <div class="modal">
+　　<div class="bigimg"><img src="" alt=""></div>
+　　<p class="close-btn"><a href="">✖</a></p>
+ </div>
  
 <footer>
  <ul class="icon">
