--- a/photo.html
+++ b/photo.html
@@ -22,17 +22,17 @@
  <ul class="flex delayScroll">
   <li class="box">
    <figure>
-    <img src="images/photo01.jpg" alt="写真：イメージ1">
+    <a href=""><img src="images/photo01.jpg" alt="写真：イメージ1">
    </figure>
   </li>
   <li class="box">
    <figure>
-    <img src="images/photo02.jpg" alt="写真：イメージ2">
+    <a href=""><img src="images/photo02.jpg" alt="写真：イメージ2">
    </figure>
   </li>
   <li class="box">
    <figure>
-    <img src="images/photo06.jpg" alt="写真：イメージ3">
+    <a href=""><img src="images/photo06.jpg" alt="写真：イメージ3">
    </figure>
   </li>
  </ul>
