--- a/photo.html
+++ b/photo.html
@@ -21,13 +21,13 @@
  
  <ul class="flex delayScroll">
   <li class="box">
-    <a href=""><img src="images/photo01.jpg" alt="写真：イメージ1">
+    <a href=""><img src="images/photo01.jpg" alt="写真：イメージ1"></a>
   </li>
   <li class="box">
-    <a href=""><img src="images/photo02.jpg" alt="写真：イメージ2">
+    <a href=""><img src="images/photo02.jpg" alt="写真：イメージ2"></a>
   </li>
   <li class="box">
-    <a href=""><img src="images/photo06.jpg" alt="写真：イメージ3">
+    <a href=""><img src="images/photo06.jpg" alt="写真：イメージ3"></a>
   </li>
  </ul>
  <div class="modal">
