--- a/photo_person.html
+++ b/photo_person.html
@@ -18,6 +18,22 @@
   <li class="current"><a href="photo_person.html">人物</a></li>
   <li><a href="photo_other.html">その他</a></li>
  </ul>
+ 
+  <ul class="flex delayScroll">
+  <li class="box">
+    <a href=""><img src="images/photo11.jpg" alt="写真：イメージ1"></a>
+  </li>
+  <li class="box">
+    <a href=""><img src="images/photo12.jpg" alt="写真：イメージ2"></a>
+  </li>
+  <li class="box">
+    <a href=""><img src="images/photo13.jpg" alt="写真：イメージ3"></a>
+  </li>
+ </ul>
+ <div class="modal">
+　　<div class="bigimg"><img src="" alt=""></div>
+　　<p class="close-btn"><a href="">✖</a></p>
+ </div>
 
 <footer>
  <ul class="icon">
