--- a/photo_other.html
+++ b/photo_other.html
@@ -20,41 +20,34 @@
  </ul>
  <ul class="flex delayScroll">
   <li class="box">
-   <figure>
-    <img src="images/photo03.jpg" alt="写真：イメージ1">
-   </figure>
+    <a href=""><img src="images/photo03.jpg" alt="写真：イメージ3"></a>
   </li>
   <li class="box">
-   <figure>
-    <img src="images/photo04.jpg" alt="写真：イメージ2">
-   </figure>
+    <a href=""><img src="images/photo04.jpg" alt="写真：イメージ4"></a>
   </li>
   <li class="box">
-   <figure>
-    <img src="images/photo05.jpg" alt="写真：イメージ1">
-   </figure>
+    <a href=""><img src="images/photo05.jpg" alt="写真：イメージ5"></a>
   </li>
   <li class="box">
-   <figure>
-    <img src="images/photo07.jpg" alt="写真：イメージ2">
-   </figure>
+    <a href=""><img src="images/photo06.jpg" alt="写真：イメージ6"></a>
   </li>
   <li class="box">
-   <figure>
-    <img src="images/photo08.jpg" alt="写真：イメージ2">
-   </figure>
+    <a href=""><img src="images/photo07.jpg" alt="写真：イメージ7"></a>
   </li>
   <li class="box">
-   <figure>
-    <img src="images/photo09.jpg" alt="写真：イメージ3">
-   </figure>
+    <a href=""><img src="images/photo08.jpg" alt="写真：イメージ8"></a>
   </li>
   <li class="box">
-   <figure>
-    <img src="images/photo10.jpg" alt="写真：イメージ3">
-   </figure>
+    <a href=""><img src="images/photo09.jpg" alt="写真：イメージ9"></a>
+  </li>
+  <li class="box">
+    <a href=""><img src="images/photo10.jpg" alt="写真：イメージ10"></a>
   </li>
  </ul>
+ <div class="modal">
+　　<div class="bigimg"><img src="" alt=""></div>
+　　<p class="close-btn"><a href="">✖</a></p>
+ </div>
    
 <footer>
  <ul class="icon">
