--- a/photo_person.html
+++ b/photo_person.html
@@ -21,13 +21,16 @@
  
   <ul class="flex delayScroll">
   <li class="box">
-    <a href=""><img src="images/photo11.jpg" alt="写真：イメージ1"></a>
+    <a href=""><img src="images/photo11.jpg" alt="写真：イメージ11"></a>
   </li>
   <li class="box">
-    <a href=""><img src="images/photo12.jpg" alt="写真：イメージ2"></a>
+    <a href=""><img src="images/photo12.jpg" alt="写真：イメージ12"></a>
   </li>
   <li class="box">
-    <a href=""><img src="images/photo13.jpg" alt="写真：イメージ3"></a>
+    <a href=""><img src="images/photo13.jpg" alt="写真：イメージ13"></a>
+  </li>
+  <li class="box">
+    <a href=""><img src="images/photo15.jpg" alt="写真：イメージ15"></a>
   </li>
  </ul>
  <div class="modal">
